fix: prevent bce-dropdown-menu overflowing container

--- a/packages/core/src/components/bce-dropdown-menu/bce-dropdown-menu.scss
+++ b/packages/core/src/components/bce-dropdown-menu/bce-dropdown-menu.scss
@@ -13,6 +13,7 @@ bce-dropdown-menu {
     border-radius: 4px;
     transition: opacity 0.3s ease-in-out;
     opacity: 0;
+    max-width: 400px;
 
     &[data-active] {
       display: block;
